@@ -4,7 +4,7 @@ Wed, 05 Sep 2007 16:12:35 -0500.
 It was downloaded from http://www.elfga.com/~erik/files
 
 Upstream Author: Erik Greenwald <erik@elfga.com>
-Copyright: Copyright (C) 2001-2015 Erik Greenwald
+Copyright: Copyright (C) 2001-2025 Erik Greenwald
 
 License:
 
@@ -25,5 +25,5 @@ License:
 On Debian systems, the complete text of the GNU General
 Public License can be found in `/usr/share/common-licenses/GPL'.
 
-The Debian packaging is (C) 2007-2015, Erik Greenwald <erik@elfga.com> and
+The Debian packaging is (C) 2007-2025, Erik Greenwald <erik@elfga.com> and
 is licensed under the GPL, see above.
